--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,7 +1,7 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "TestAppID",
+  "appId": "AppID",
   "asar": true,
   "productName": "rsbuild-electron-example",
   "directories": {
