--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "rsbuild-electron-example",
   "version": "1.0.0",
   "main": "dist-electron/main/main.js",
-  "packageManager": "pnpm@9.12.3",
   "scripts": {
+    "dev":"parallel",
     "dev:renderer": "rsbuild dev",
     "dev:main": "chcp 65001 && electron ./dist-electron/main/main.js",
     "svelte-check": "svelte-check --tsconfig ./tsconfig.json",
@@ -13,26 +13,22 @@
   },
   "devDependencies": {
     "@electron-toolkit/preload": "^3.0.1",
-    "@rsbuild/core": "^1.1.0",
-    "@rsbuild/plugin-svelte": "^1.0.4",
-    "@turf/turf": "^7.1.0",
-    "@types/node": "^22.9.0",
-    "chokidar": "^4.0.1",
+    "@rsbuild/core": "^1.1.13",
+    "@rsbuild/plugin-svelte": "^1.0.7",
+    "@types/node": "^22.10.2",
+    "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
-    "electron": "33.2.0",
+    "electron": "33.2.1",
     "electron-builder": "^25.1.8",
-    "electron-log": "^5.2.2",
-    "es-toolkit": "^1.27.0",
-    "execa": "^9.5.1",
-    "npm-run-all2": "^7.0.1",
-    "nx": "^20.0.12",
+    "electron-log": "^5.2.4",
+    "es-toolkit": "^1.30.1",
+    "execa": "^9.5.2",
+    "parallel-wait-run": "^0.2.2",
     "rimraf": "^6.0.1",
-    "svelte": "^5.1.13",
-    "svelte-check": "^4.0.6",
+    "svelte": "^5.16.0",
+    "svelte-check": "^4.1.1",
     "tsx": "^4.19.2",
-    "turbo": "^2.2.3",
-    "typescript": "^5.6.3",
-    "webpack-dev-server": "^5.1.0"
+    "typescript": "^5.7.2"
   }
 }
