✨ feat: 新增prisma orm配置

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -11,6 +11,13 @@
     "dist",
     "dist-electron"
   ],
+  "extraResources": [
+    "prisma/dev.db",
+    "node_modules/.prisma/**/*",
+    "node_modules/@prisma/client/**/*",
+    "node_modules/@prisma/engines/**/*",
+    "node_modules/prisma/**/*"
+  ],
   "win": {
     "target": [
       {
