--- a/package.json
+++ b/package.json
@@ -3,32 +3,55 @@
   "version": "1.0.0",
   "main": "dist-electron/main/main.js",
   "scripts": {
-    "dev":"parallel",
+    "dev": "parallel",
     "dev:renderer": "rsbuild dev",
     "dev:main": "chcp 65001 && electron ./dist-electron/main/main.js",
     "svelte-check": "svelte-check --tsconfig ./tsconfig.json",
     "build": "rimraf dist dist-electron && rsbuild build",
     "build:dir": "pnpm build && cross-env HTTPS_PROXY=http://127.0.0.1:7890 && electron-builder --dir",
-    "build:win": "pnpm build && cross-env HTTPS_PROXY=http://127.0.0.1:7890 && electron-builder --win"
+    "build:win": "pnpm build && cross-env HTTPS_PROXY=http://127.0.0.1:7890 && electron-builder --win",
+    "init:prisma": "prisma init --with-model --datasource-provider sqlite",
+    "migrate:dev": "prisma migrate dev --name init",
+    "studio": "prisma studio"
   },
   "devDependencies": {
     "@electron-toolkit/preload": "^3.0.1",
-    "@rsbuild/core": "^1.1.13",
-    "@rsbuild/plugin-svelte": "^1.0.7",
-    "@types/node": "^22.10.2",
+    "@faker-js/faker": "^9.5.0",
+    "@rsbuild/core": "^1.2.10",
+    "@rsbuild/plugin-svelte": "^1.0.8",
+    "@types/node": "^22.13.4",
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
-    "electron": "33.2.1",
+    "electron": "34.2.0",
     "electron-builder": "^25.1.8",
-    "electron-log": "^5.2.4",
-    "es-toolkit": "^1.30.1",
+    "electron-log": "^5.3.0",
+    "es-toolkit": "^1.32.0",
     "execa": "^9.5.2",
     "parallel-wait-run": "^0.2.2",
     "rimraf": "^6.0.1",
-    "svelte": "^5.16.0",
-    "svelte-check": "^4.1.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "svelte": "^5.20.2",
+    "svelte-check": "^4.1.4",
+    "tsx": "^4.19.3",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.4.0",
+    "prisma": "^6.4.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "electron",
+      "prisma"
+    ],
+    "ignoredBuiltDependencies": [
+      "core-js",
+      "core-js-pure",
+      "esbuild",
+      "parallel-wait-run",
+      "svelte-preprocess"
+    ]
   }
 }
