--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
   "devDependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@faker-js/faker": "^9.8.0",
-    "@rsbuild/core": "1.4.0-beta.5",
+    "@rsbuild/core": "1.4.0",
     "@rsbuild/plugin-svelte": "^1.0.10",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.4",
     "chokidar": "^4.0.3",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
-    "electron": "36.5.0",
+    "electron": "37.1.0",
     "electron-builder": "^26.0.12",
     "electron-log": "^5.4.1",
-    "es-toolkit": "^1.39.3",
+    "es-toolkit": "^1.39.5",
     "execa": "^9.6.0",
     "parallel-wait-run": "^0.2.2",
     "rimraf": "^6.0.1",
-    "svelte": "^5.34.7",
+    "svelte": "^5.34.8",
     "svelte-check": "^4.2.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
